[gd_scene load_steps=3 format=3 uid="uid://lpk8b5yjpnc6"]

[ext_resource type="Script" uid="uid://dlgqgwsj7qkgo" path="res://scenes/ui/betting_panel/betting_panel.gd" id="1_3ubeg"]
[ext_resource type="Theme" uid="uid://cyjb538c0mg2c" path="res://assets/themes/main_theme.tres" id="1_pxbjp"]

[node name="BettingPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ubeg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -74.0
offset_right = 106.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_pxbjp")
text = "Place Your Bet"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_pxbjp")
theme_override_font_sizes/font_size = 16
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FighterButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FighterButtonLeft" type="Button" parent="VBoxContainer/FighterButtons"]
layout_mode = 2
theme = ExtResource("1_pxbjp")
text = "Choose"

[node name="FighterButtonRight" type="Button" parent="VBoxContainer/FighterButtons"]
layout_mode = 2
theme = ExtResource("1_pxbjp")
text = "Choose"

[node name="ConfirmButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_pxbjp")
text = "Lock Bet"
